fix(client): disabled pointer events when the canvas is not visible

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 
   position: absolute;
   background: transparent;
+  pointer-events: painted;
 }
 
 .app__layer#canvas {
